fix minor layout issue

--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -23,9 +23,6 @@
 .font-color__zinc-500 {
   color: $color-zinc-500;
 }
-.wrapper {
-  display: flex;
-}
 
 .text-white {
   color: $color-primary-white;
