--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -108,15 +108,16 @@
 
   &__title-box {
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
     justify-content: space-between;
     align-items: center;
     font-weight: 600;
+    flex-wrap: wrap;
+  }
 
-    @include respond(mobile-pt) {
-      flex-direction: column;
-      align-items: start;
-    }
+  &__title-wrapper {
+    display: flex;
+    align-items: center;
   }
 }
 
